objects/ASI_KOR_Sales_Order_History__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Customer_PO__c</fullName>
        <label>Customer PO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_JDE_Invoice_No__c</fullName>
        <label>JDE Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_Entry_Date__c</fullName>
        <label>Order Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_No__c</fullName>
        <label>JDE Sales Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Month_Formula__c</fullName>
        <formula>CASE(MONTH( ASI_KOR_Delivery_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <label>SIT Report - Month (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Month_Picklist__c</fullName>
        <label>SIT Report - Month (Picklist)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Year_Formula__c</fullName>
        <formula>TEXT(YEAR( ASI_KOR_Delivery_Date__c ))</formula>
        <label>SIT Report - Year (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_SOHHID__c</fullName>
        <externalId>true</externalId>
        <label>SYS_INFO_SOHHID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Amount__c</fullName>
        <inlineHelpText>Include VAT</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Wholesaler__c</fullName>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Histories</relationshipLabel>
        <relationshipName>Sales_Order_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRK</fullName>
                </value>
                <value>
                    <fullName>PRK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order History</label>
    <nameField>
        <displayFormat>SOH-{00000}</displayFormat>
        <label>Sales Order History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>